--- a/views/instructor/watch.ejs
+++ b/views/instructor/watch.ejs
@@ -44,7 +44,7 @@
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" id="dropdownUser" data-toggle="dropdown" aria-haspopup="true"
                 aria-expanded="false">
-                <%= user.username %>
+                <%= user.user_name %>
               </a>
               <div class="dropdown-menu" aria-labelledby="dropdownUser">
                 <a class="dropdown-item" href="/instructor/profile">My Profile</a>
