--- a/views/user/profile.ejs
+++ b/views/user/profile.ejs
@@ -82,11 +82,11 @@
 	</nav>
 
 	<!-- Main content -->
-	<form action="/instructor/profile?user_id=<%=user.id%>" method="post" enctype="multipart/form-data" name="profileForm" id="profileForm">
+	<form action="/student/profile" method="post" enctype="multipart/form-data" name="profileForm" id="profileForm">
 
 		<div class="wrapper bg-white mt-sm-5">
 			<h4 class="pb-4 border-bottom ">Account settings</h4>
-			<div class="d-flex align-items-start py-3 border-bottom form-group"> 
+			<div class="d-flex align-items-start py-3 border-bottom form-group">
 				<img id='image'src=<%= user.avatar_url?user.avatar_url:"/assets/images/default_avt.png" %> class="img"alt="Avatar">
 				<div class="pl-sm-4 pl-2" id="img-section">
 					<p><b>Avatar</b></p>
@@ -125,14 +125,14 @@
 					<div class="col-12"> <label for="address">Address</label> <input type="text" name="address"class="bg-light form-control"
 							placeholder="ex.189I/32a Tôn Thất Thuyết P3 Q4 TPHCM" value="<%=user.user_address%>"> </div>
 				</div>
-	
-	
+
+
 			</div>
-			<div class="py-3 pb-4 border-bottom "> 
-				<button class="btn btn-primary mr-3 btn-save" data-form-id="profileForm">Save</button> 
-				<button class="btn border button danger btn-cancel" data-form-id="profileForm">Cancel</button> 
+			<div class="py-3 pb-4 border-bottom ">
+				<button class="btn btn-primary mr-3 btn-save" data-form-id="profileForm">Save</button>
+				<button class="btn border button danger btn-cancel" data-form-id="profileForm">Cancel</button>
 			</div>
-			
+
 		</div>
 	</form>
 
@@ -232,7 +232,7 @@
 			}).then((result) => {
 				/* Read more about isConfirmed, isDenied below */
 				if (result.isConfirmed) {
-					var formData = new FormData(document.getElementsByName('profileForm')[0]);// yourForm: form selector        
+					var formData = new FormData(document.getElementsByName('profileForm')[0]);// yourForm: form selector
 					// var form = $('#'+$(this).attr("data-form-id"));
 					var url = $(formData).attr('action');
 
