add both filters in list courses

--- a/views/user/course.ejs
+++ b/views/user/course.ejs
@@ -261,7 +261,7 @@
                         <%= item.course_name %>
                       </div>
                       <div class="relate-course-detail">
-                        60.2 total hours. <span>Update <%= item.updated_at %></span>
+                        <span>Update <%= item.updated_at %></span>
                       </div>
                     </div>
                   </div>
