--- a/views/admin/index.ejs
+++ b/views/admin/index.ejs
@@ -54,7 +54,7 @@
           </li>
         </ul>
         <div class="mt-5 text-center home">
-          <a href="/">Back to home</a>
+          <a class="d-block mt-2" href="/logout">Log out</a>
         </div>
 
       </div>
@@ -182,6 +182,18 @@
                 </option>
               <% }) %>
             </select>
+            <select class="form-select ml-2 mb-2" id="filterCategory">
+              <option value="" selected>All categories</option>
+              <% rootCategories.forEach(rootCategory => { %>
+                <% rootCategory.Categories.forEach(item => { %>
+                  <option value="<%= item.category_name %>">
+                    <%= item.category_name %>
+                  </option>
+                <% }) %>
+              <% }) %>
+            </select>
+
+            <button class="btn btn-outline-dark ml-2 mb-2 p-1" id="filterCourse">Filter</button>
           </div>
           <div id="courseLength" class="count">
             Total: <%= courses.length %>
@@ -198,7 +210,7 @@
               <th>Action</th>
             </tr>
             <% courses.forEach(item => { %>
-              <tr class="course-table-item" data-instructor-name="<%= `${item.Instructor.User.first_name} ${item.Instructor.User.last_name}` %>">
+              <tr class="course-table-item" data-category-name="<%= item.Category.category_name %>" data-instructor-name="<%= `${item.Instructor.User.first_name} ${item.Instructor.User.last_name}` %>">
                 <td><%= item.id %></td>
                 <td class="d-flex"  data-trigger="hover" data-toggle="popover" title="Full Description" data-content="<%= item.full_description %>">
                   <div>
@@ -217,7 +229,11 @@
                 <td><%= `${item.Instructor.User.first_name} ${item.Instructor.User.last_name}` %></td>
                 <td><%= item.price %> <%= item.concurrency%></td>
                 <td>
-                  <button class="btn btn-danger">Disable</button>
+                  <% if(item.is_active) { %>
+                    <button data-course-id="<%= item.id %>" class="btn btn-disable-course btn-danger">Disable</button>
+                  <% } else { %>
+                    <button data-course-id="<%= item.id %>" class="btn btn-enable-course btn-primary">Enable</button>
+                  <% } %>
                 </td>
               </tr>
             <% }) %>
@@ -333,6 +349,33 @@
         })
       })
 
+      $(".btn-disable-course").click(function() {
+        let courseId = $(this).data("course-id")
+        $.post(`/admin/activeCourse/${courseId}?isActive=false`, async function(data, status) {
+          console.log(data.msg)
+          if(data.msg === "ok") {
+            await Swal.fire({
+              icon: "success",
+              title: "Disable success"
+            })
+            location.reload()
+          }
+        })
+      })
+      $(".btn-enable-course").click(function() {
+        let courseId = $(this).data("course-id")
+        $.post(`/admin/activeCourse/${courseId}?isActive=true`, async function(data, status) {
+          console.log(data.msg)
+          if(data.msg === "ok") {
+            await Swal.fire({
+              icon: "success",
+              title: "Enable success"
+            })
+            location.reload()
+          }
+        })
+      })
+
       var timer;
       $("#email").change(function(){
         clearTimeout(timer)
@@ -407,17 +450,25 @@
         }
       })
 
-      $("#filterInstructor").change(function(){
-        let name = $(this).val()
+      $("#filterCourse").click(function(){
+        let name = $("#filterInstructor").val()
+        let category = $("#filterCategory").val()
         let total;
-        if(name === "") {
+        if(name === "" && category === "") {
           total = $(".course-table-item").length
           $(".course-table-item").show()
-        }
-        else {
+        } else if(name !== "" && category === "") {
           $(".course-table-item").hide()
           total = $(`[data-instructor-name="${name}"]`).length
           $(`[data-instructor-name="${name}"]`).show()
+        } else if(name === "" && category !== "") {
+          $(".course-table-item").hide()
+          total = $(`[data-category-name="${category}"]`).length
+          $(`[data-category-name="${category}"]`).show()
+        } else {
+          $(".course-table-item").hide()
+          total = $(`[data-category-name="${category}"][data-instructor-name="${name}"]`).length
+          $(`[data-category-name="${category}"][data-instructor-name="${name}"]`).show()
         }
         $("#courseLength").text(`Total: ${total}`)
       })
