category page in  admin, update button Add course, update user  watch course

--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -90,7 +90,7 @@ tr:nth-child(even) {
   color: #fff;
 }
 
-#instructorTable, #courseTable{
+#instructorTable, #courseTable, #studentTable {
   display: none;
 }
 
@@ -147,4 +147,8 @@ body.loading .overlay{
 #btnSubmitForm:hover {
   background-position: 100% 0 !important;
   transition: all 0.4s ease-in-out;
+}
+
+.savecancel, .select_root_name{
+  display: none;
 }
