--- a/public/css/watchlist.css
+++ b/public/css/watchlist.css
@@ -57,3 +57,12 @@
   border-bottom: 1px solid #333333;
   border-left: 1px solid #CCCCCC;
 }
+
+
+#btn-add-course{
+  margin: 10px;
+  border-top: 1px solid #CCCCCC;
+  border-right: 1px solid #333333;
+  border-bottom: 1px solid #333333;
+  border-left: 1px solid #CCCCCC;
+}
