--- a/views/user/search.ejs
+++ b/views/user/search.ejs
@@ -186,9 +186,9 @@
             <option value="ASC">Ascending</option>
             <option value="DESC">Descending </option>
           </select>
-          
+
         </div>
-        <div id="coursesSection"  class="col-9">    
+        <div id="coursesSection"  class="col-9">
           <% payload.courses.forEach((item) => { %>
             <a href="/courses/<%= item.id %>" class="d-block mb-3">
               <div class="row courses-item">
@@ -261,11 +261,11 @@
                 </ul>
             <% } %>
             </nav>
-          </div>   
+          </div>
         </div>
       </div>
     </div>
-    
+
 
   </div>
 
@@ -281,10 +281,10 @@
           <li><img src="https://s.udemycdn.com/partner-logos/surveymonkey-logo.svg" alt=""></li>
           <li><img src="https://s.udemycdn.com/partner-logos/booking-logo.svg" alt=""></li>
         </ul>
-      </div>  
+      </div>
     </div>
     <hr>
-  
+
   <!-- footer -->
   <div class="container-fluid footer">
     <div class="row">
@@ -311,7 +311,7 @@
       <ul class="col list-group">
         <li class="list-group"><a href="#">
           Terms</a></li>
-        <li class="list-group"><a href="#">           
+        <li class="list-group"><a href="#">
           Privacy policy and cookie policy</a></li>
         <li class="list-group"><a href="#">
           Sitemap</a></li>
@@ -335,7 +335,7 @@
       document.getElementById("mySidenav").style.width = "250px";
       document.getElementById("main").style.marginLeft = "250px";
     }
-    
+
     function closeNav() {
       document.getElementById("mySidenav").style.width = "0";
       document.getElementById("main").style.marginLeft= "0";
@@ -350,7 +350,7 @@
 
   <!-- Latest compiled JavaScript -->
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-  
+
   <script>
     $(document).ready(function(){
       let filterFlag = true;
@@ -378,7 +378,7 @@
       $(".page").click(function() {
         let page = $(this).data("page")
         let query = $("#filterSection").data("query")
-        window.location.href = `/search?query=${query}?page=${page}`
+        window.location.href = `/search?query=${query}&page=${page}`
       })
     })
   </script>
