--- a/public/css/watchlist.css
+++ b/public/css/watchlist.css
@@ -47,22 +47,18 @@
   font-weight: 700;
 }
 
-.button {
-  text-decoration: none;
-  background-color: #08baf0;
-  color: #f50707;
-  padding: 2px 6px 2px 6px;
-  border-top: 1px solid #CCCCCC;
-  border-right: 1px solid #333333;
-  border-bottom: 1px solid #333333;
-  border-left: 1px solid #CCCCCC;
-}
+/*.button {*/
+/*  text-decoration: none;*/
+/*  background-color: #08baf0;*/
+/*  color: #f50707;*/
+/*  padding: 2px 6px 2px 6px;*/
+/*  border-top: 1px solid #CCCCCC;*/
+/*  border-right: 1px solid #333333;*/
+/*  border-bottom: 1px solid #333333;*/
+/*  border-left: 1px solid #CCCCCC;*/
+/*}*/
 
 
-#btn-add-course{
-  margin: 10px;
-  border-top: 1px solid #CCCCCC;
-  border-right: 1px solid #333333;
-  border-bottom: 1px solid #333333;
-  border-left: 1px solid #CCCCCC;
+.button{
+  color: white !important;
 }
