--- a/views/user/course.ejs
+++ b/views/user/course.ejs
@@ -303,7 +303,7 @@
               <div class="row">
                 <div class="col-1">
                   <img class="rounded-circle"
-                    src="https://www.cogandhand.com.au/wp-content/plugins/all-in-one-seo-pack/images/default-user-image.png"
+                    src="<%= item.Student.User.avatar_url %>"
                     width="50px" height="50px">
                 </div>
                 <div class="col-11">
